Add OTEL headers to HTTPCalls and replace strings with constants